--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/import.css">
+    <script src="/assets/scripts/script.js" defer></script>
     <title>Homepage</title>
 </head>
 
