--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <section>
+        <section> <!-- Section 1 og 2: Johan -->
             <h1>Goal 6: Ensure availability and sustainable management of water and sanitation for all</h1>
             <img src="assets/elements/waterdrop.svg" alt="waterdrop">
         </section>
@@ -19,7 +19,7 @@
             <!-- Wave animation, drop falling -->
             <p>Half the world experiences severe water scarcity every year — and the number is growing.</p>
         </section>
-        <section>
+        <section> <!-- Section 3: Emil -->
             <div>
                 <h2>Target 6.1</h2>
                 <p>By 2030, achieve universal and equitable access to safe and affordable drinking water for all</p>
@@ -52,7 +52,7 @@
                 <p>Support and strengthen the participation of local communities in improving water and sanitation management</p>
             </div>
         </section>
-        <section>
+        <section> <!-- Section 4: Tuva -->
             <h2>The Clock Is Ticking on SDG 6</h2>
             <p>Despite progress in some areas, the world is falling dangerously behind on Sustainable Development Goal 6. As of 2022, not a single SDG 6 target is on track to be met.</p>
             <!-- An image or something -->
