html + fixing global css (variables, globals)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
     <main>
-        <section> <!-- Section 1 og 2: Johan -->
-            <h1>Goal 6: Ensure availability and sustainable management of water and sanitation for all</h1>
-            <img src="assets/elements/waterdrop.svg" alt="waterdrop">
+        <section class="section-top"> <!-- Section 1 og 2: Johan -->
+            <h1 class="section-top__title">Goal 6: Ensure availability and sustainable management of water and
+                sanitation for all</h1>
+            <img class="section-top__icon" src="assets/elements/waterdrop.svg" alt="waterdrop">
         </section>
         <section>
             <!-- Wave animation, drop falling -->
