--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <main>
         <section class="section-top"> <!-- Section 1 og 2: Johan -->
-            <h1 class="section-top__title">Goal 6: Ensure availability and sustainable management of water and
-                sanitation for all</h1>
+            <h1 class="section-top__title">Goal 6</h1>
+            <p class="section-top__text">Ensure availability and sustainable management of water and
+                sanitation for all</p>
             <img class="section-top__icon" src="assets/elements/waterdrop.svg" alt="waterdrop">
         </section>
         <section>
