fixed - section top/ section wave -> other

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
                 sanitation for all</p>
             <img class="section-top__icon" src="assets/elements/waterdrop.svg" alt="waterdrop">
         </section>
-        <section>
+        <section class="section-wave">
             <!-- Wave animation, drop falling -->
-            <p>Half the world experiences severe water scarcity every year — and the number is growing.</p>
+            <p class="section-wave__text">Half the world experiences severe water scarcity every year — and the number
+                is growing.</p>
+            <img class="section-wave__icon" src="assets/elements/waterdrop.svg" alt="blue wave moving">
         </section>
         <section> <!-- Section 3: Emil -->
             <div>
