layout message + footer

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
                 <h2 class="intro-facts__title">The Clock Is Ticking on SDG 6</h2>
                 <p class="intro-facts__text">Despite progress in some areas, the world is falling dangerously behind on Sustainable Development Goal
                 6. As of 2022, not a single SDG 6 target is on track to be met.</p>
+                <img src="assets/elements/waterdrop.svg">
                 <!-- An image or something -->
             </div>
             <div class="facts"><!-- To create grid or flex -->
-                <div>
-                    <!-- An image or something -->
-                    <ul>
+                <div class="facts__item">
+                    <img src="assets/elements/waterdrop.svg">
+                    <ul class="facts__text">
                         <li>2.2 billion people still lack access to safely managed drinking water</li>
                         <li>3.5 billion people live without safely managed sanitation</li>
                         <li>Between 2002 and 2021, droughts affected over 1.4 billion people</li>
@@ -83,56 +84,57 @@
                             faced extremely high water stress</li>
                     </ul>
                 </div>
-                <div>
-                    <p>Nearly 40% of the world’s population lives in river and lake basins that cross national borders.
+                <div class="facts__item">
+                    <p class="facts__text">Nearly 40% of the world’s population lives in river and lake basins that cross national borders.
                         Yet, fewer than 20% of countries have effective agreements to manage these shared waters.
                         Without cooperation, both people and planet suffer.</p>
-                    <!-- An image or something -->
+                    <img src="assets/elements/waterdrop.svg">
                 </div>
-                <div>
-                    <!-- An image or something -->
-                    <p>Access to water and sanitation is improving, but not quickly enough to meet 2030 goals—progress
+                <div class="facts__item facts__item--reverse">
+                    <img src="assets/elements/waterdrop.svg">
+                    <p class="facts__text">Access to water and sanitation is improving, but not quickly enough to meet 2030 goals—progress
                         must accelerate 3 to 6 times faster.</p>
                 </div>
-                <div>
-                    <p>Wastewater treatment is increasing, yet only 60% is safely treated, and water quality is
+                <div class="facts__item">
+                    <p class="facts__text">Wastewater treatment is increasing, yet only 60% is safely treated, and water quality is
                         declining where monitoring is most advanced.</p>
-                    <!-- An image or something -->
+                        <img src="assets/elements/waterdrop.svg">
                 </div>
-                <div>
-                    <!-- An image or something -->
-                    <p>Water use is more efficient, but global water stress is rising, especially in vulnerable regions.
-                    </p>
+                <div class="facts__item facts__item--reverse">
+                    <img src="assets/elements/waterdrop.svg">
+                    <p class="facts__text">Water use is more efficient, but global water stress is rising, especially in vulnerable regions.</p>
                 </div>
-                <div>
-                    <p>Integrated water management remains slow—just 57% implementation globally, and many countries
+                <div class="facts__item">
+                    <p class="facts__text">Integrated water management remains slow—just 57% implementation globally, and many countries
                         still lack agreements on shared waters.</p>
-                    <!-- An image or something -->
+                        <img src="assets/elements/waterdrop.svg">
                 </div>
-                <div>
-                    <!-- An image or something -->
-                    <p>While surface water has grown overall, some regions face dangerous losses due to drought and
+                <div class="facts__item facts__item--reverse">
+                    <img src="assets/elements/waterdrop.svg">
+                    <p class="facts__text">While surface water has grown overall, some regions face dangerous losses due to drought and
                         overuse.</p>
                 </div>
-                <div>
-                    <p>Funding is finally rising again, with water sector aid up 10% in 2022, reversing a five-year dip.
-                    </p>
-                    <!-- An image or something -->
+                <div class="facts__item">
+                    <p class="facts__text">Funding is finally rising again, with water sector aid up 10% in 2022, reversing a five-year dip.</p>
+                    <img src="assets/elements/waterdrop.svg">
                 </div>
             </div>
         </section>
-        <section>
+        <section class="message">
             <h2>We Can’t Afford to Wait</h2>
-            <p>The message is clear: progress is possible, but not at the current pace. Without bold, coordinated global
+            <p class="message__text">The message is clear: progress is possible, but not at the current pace. Without bold, coordinated global
                 action, millions will continue to live
                 without the most basic of human rights—clean water and sanitation. It’s time to prioritize integrated
                 water management, climate adaptation,
                 and cross-border cooperation.</p>
 
-            <p>Water is life. Let’s act like it.</p>
-            <button>Back to start</button>
+            <p class="message__slogan">Water is life. Let’s act like it.</p>
+            <button class="message__btn">Back to start</button>
         </section>
     </main>
+    <footer class="footer">
+        <p class="footer__text">&#169; This page was created by Emil Larsen, Johan Markus Faanes and Tuva Konstanse Hansen for the class IDG1293</p>
+    </footer>
 </body>
 
 </html>
