--- a/index.html
+++ b/index.html
@@ -68,15 +68,14 @@
                     management</p>
             </div>
         </section>
-        <section> <!-- Section 4: Tuva -->
-            <div class="intro-facts">
-                <h2 class="intro-facts__title">The Clock Is Ticking on SDG 6</h2>
-                <p class="intro-facts__text">Despite progress in some areas, the world is falling dangerously behind on Sustainable Development Goal
+        <section class="facts"> <!-- Section 4: Tuva -->
+            <div class="facts__intro">
+                <h2 class="facts__title">The Clock Is Ticking on SDG 6</h2>
+                <p class="facts__text">Despite progress in some areas, the world is falling dangerously behind on Sustainable Development Goal
                 6. As of 2022, not a single SDG 6 target is on track to be met.</p>
-                <img src="assets/elements/waterdrop.svg">
                 <!-- An image or something -->
             </div>
-            <div class="facts"><!-- To create grid or flex -->
+            <div class="facts__container"><!-- To create grid or flex -->
                 <div class="facts__item">
                     <img src="assets/elements/waterdrop.svg">
                     <ul class="facts__text">
