--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                         <li>2.2 billion people still lack access to safely managed drinking water</li>
                         <li>3.5 billion people live without safely managed sanitation</li>
                         <li>Between 2002 and 2021, droughts affected over 1.4 billion people</li>
-                        <li>In 2022, half of the global population experienced severe water scarcity, and one in four
-                            faced extremely high water stress</li>
+                        <li>In 2022, half of the global population experienced severe water scarcity, and one in four faced extremely high water stress</li>
                     </ul>
                 </div>
                 <div class="facts__item">
