fixed line-height + changed p to h2 in wave

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </section>
         <section class="section-wave">
             <!-- Wave animation, drop falling -->
-            <p class="section-wave__text">Half the world experiences severe water scarcity every year — and the number
-                is growing.</p>
+            <h2 class="section-wave__text">Half the world experiences severe water scarcity every year — and the number
+                is growing.</h2>
             <div class="section-wave__icon"></div>
         </section>
         <section class="horizontal-scroll"> <!-- Section 3: Emil -->
