--- a/index.html
+++ b/index.html
@@ -96,68 +96,57 @@
             </div>
         </section>
 
-        <section class="facts"> <!-- Section 4: Tuva -->
-            <div class="facts__intro">
-                <h2 class="facts__title">The Clock Is Ticking on SDG 6</h2>
-                <p class="facts__text">Despite progress in some areas, the world is falling dangerously behind on Sustainable Development Goal
-                6. As of 2022, not a single SDG 6 target is on track to be met.</p>
-                <!-- An image or something -->
+        <section class="history"> <!-- Section 4: Tuva -->
+            <div class="history__part">
+                <h2 class="history__title">The Clock Is Ticking...</h2>
+                <p class="history__text">In 2015, the world pledged to ensure clean water and sanitation for all by 2030 through Sustainable Development Goal 6, but as of 2022, not a single target is on track.</p>
             </div>
-            <div class="facts__container"><!-- To create grid or flex -->
-                <div class="facts__item">
-                    <img src="assets/elements/waterdrop.svg">
-                    <ul class="facts__text">
-                        <li>2.2 billion people still lack access to safely managed drinking water</li>
-                        <li>3.5 billion people live without safely managed sanitation</li>
-                        <li>Between 2002 and 2021, droughts affected over 1.4 billion people</li>
-                        <li>In 2022, half of the global population experienced severe water scarcity, and one in four faced extremely high water stress</li>
-                    </ul>
-                </div>
-                <div class="facts__item">
-                    <p class="facts__text">Nearly 40% of the world’s population lives in river and lake basins that cross national borders.
-                        Yet, fewer than 20% of countries have effective agreements to manage these shared waters.
-                        Without cooperation, both people and planet suffer.</p>
-                    <img src="assets/elements/waterdrop.svg">
-                </div>
-                <div class="facts__item facts__item--reverse">
-                    <img src="assets/elements/waterdrop.svg">
-                    <p class="facts__text">Access to water and sanitation is improving, but not quickly enough to meet 2030 goals—progress
-                        must accelerate 3 to 6 times faster.</p>
-                </div>
-                <div class="facts__item">
-                    <p class="facts__text">Wastewater treatment is increasing, yet only 60% is safely treated, and water quality is
-                        declining where monitoring is most advanced.</p>
-                        <img src="assets/elements/waterdrop.svg">
-                </div>
-                <div class="facts__item facts__item--reverse">
-                    <img src="assets/elements/waterdrop.svg">
-                    <p class="facts__text">Water use is more efficient, but global water stress is rising, especially in vulnerable regions.</p>
-                </div>
-                <div class="facts__item">
-                    <p class="facts__text">Integrated water management remains slow—just 57% implementation globally, and many countries
-                        still lack agreements on shared waters.</p>
-                        <img src="assets/elements/waterdrop.svg">
-                </div>
-                <div class="facts__item facts__item--reverse">
-                    <img src="assets/elements/waterdrop.svg">
-                    <p class="facts__text">While surface water has grown overall, some regions face dangerous losses due to drought and
-                        overuse.</p>
-                </div>
-                <div class="facts__item">
-                    <p class="facts__text">Funding is finally rising again, with water sector aid up 10% in 2022, reversing a five-year dip.</p>
-                    <img src="assets/elements/waterdrop.svg">
-                </div>
+            <div class="history__part">
+                <p>This is the story about</p>
+                <p>Maya</p>
+                <img src="assets/elements/maya.svg" alt="A sad little girl">
+            </div>
+            <div class="history__part">
+                <p>Every morning, 12-year-old Maya wakes before the sun. Not to get ready for school—but to fetch water.</p>
+                <p>She walks nearly 3 kilometers down a dusty path in her rural village.The river she collects from isn't clean, but it'Fs the only option.</p>
+                <img src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
+            </div>
+            <div class="history__part">
+                <p>Boiling the water helps a little—when there's enough fuel, but some days, the water makes her sick.</p>
+                <img src="assets/elements/boiling-water.svg" alt="A pot with boiling water over a fire">
+                <p>Maya is one of 2.2 billion people worldwide without access to safe drinking water.</p>
+            </div>
+            <div class="history__part">
+                <p>Her family lives in a region hit by frequent droughts. Part of the 1.4 billion affected by droughts between 2002 and 2021.</p>
+            </div>
+            <div class="history__part">
+                <p>On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
+                <p>In 2022, half the world faced severe water scarcity. One in four people lived with extremely high water stress.</p>
+                <img src="assets/elements/earth.svg" alt="The earth going from green to brown">
+            </div>
+            <div class="history__part">
+                <p>Maya's river flows through two countries.</p>
+                <svg></svg> <!-- The river -->
+                <p>But neither government talks to the other about how to protect it.</p>
+            </div>
+            <div class="history__part">
+                <p>Less than 20% of countries with shared waters have strong cooperation.</p>
+            </div>
+            <div class="history__part">
+                <p>There is progress. Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
+                <!-- Animation of plant -->
+            </div>
+            <div class="history__part">
+                <p>But Maya doesn't feel that progress—not yet.</p>
+                <img src="assets/elements/maya.svg" alt="A sad little girl">
             </div>
         </section>
         <section class="message">
-            <h2>We Can’t Afford to Wait</h2>
-            <p class="message__text">The message is clear: progress is possible, but not at the current pace. Without bold, coordinated global
-                action, millions will continue to live
-                without the most basic of human rights—clean water and sanitation. It’s time to prioritize integrated
-                water management, climate adaptation,
-                and cross-border cooperation.</p>
+            <h2>We Can't Afford to Wait</h2>
+            <p class="message__text">The message is clear: To reach the world's promise of clean water and safe sanitation by 2030, we must move 3 to 6 times faster. 
+                Because while statistics matter, it's children like Maya who remind us: every number is a life.</p>
 
-            <p class="message__slogan">Water is life. Let’s act like it.</p>
+            <p class="message__slogan">Water is life. Let's act like it.</p>
             <button class="message__btn">Back to start</button>
         </section>
     </main>
