removed thing that was not needed in scrollContent

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.1</h2>
+                    <h2 class="scrollContent__title">6.1</h2>
                     <p class="scrollContent__paragraph">By 2030, achieve universal and equitable access to safe and affordable drinking water for all</p>
                 </div>
             </div>
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.2</h2>
+                    <h2 class="scrollContent__title">6.2</h2>
                     <p class="scrollContent__paragraph">By 2030, achieve access to adequate and equitable sanitation and hygiene for all and end open
                         defecation, paying special attention to the needs of women and girls and those in vulnerable
                         situations
@@ -45,7 +45,7 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.3</h2>
+                    <h2 class="scrollContent__title">6.3</h2>
                     <p class="scrollContent__paragraph">By 2030, improve water quality by reducing pollution, eliminating dumping and minimizing release of
                         hazardous chemicals and materials, halving the proportion of untreated wastewater and substantially
                         increasing recycling and safe reuse globally
@@ -55,7 +55,7 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.4</h2>
+                    <h2 class="scrollContent__title">6.4</h2>
                     <p class="scrollContent__paragraph">By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable
                         withdrawals and supply of freshwater to address water scarcity and substantially reduce the number
                         of people suffering from water scarcity</p>
@@ -64,7 +64,7 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title"horizontal__title>Target 6.5</h2>
+                    <h2 class="scrollContent__title"horizontal__title>6.5</h2>
                     <p class="scrollContent__paragraph">By 2030, implement integrated water resources management at all levels, including through
                         transboundary cooperation as appropriate</p>
                 </div>
@@ -72,7 +72,7 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.6</h2>
+                    <h2 class="scrollContent__title">6.6</h2>
                     <p class="scrollContent__paragraph">By 2020, protect and restore water-related ecosystems, including mountains, forests, wetlands,
                         rivers, aquifers and lakes</p>
                 </div>
@@ -80,7 +80,7 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.7</h2>
+                    <h2 class="scrollContent__title">6.7</h2>
                     <p class="scrollContent__paragraph">By 2030, expand international cooperation and capacity-building support to developing countries in
                         water- and sanitation-related activities and programmes, including water harvesting, desalination,
                         water efficiency, wastewater treatment, recycling and reuse technologies</p>
@@ -89,7 +89,7 @@
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title">Target 6.8</h2>
+                    <h2 class="scrollContent__title">6.8</h2>
                     <p class="scrollContent__paragraph">Support and strengthen the participation of local communities in improving water and sanitation
                         management</p>
                 </div>
