added background colors to history parts

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p>Maya</p>
                 <img src="assets/elements/maya.svg" alt="A sad little girl">
             </div>
-            <div class="history__part">
+            <div class="history__part history__part--sunrise">
                 <p>Every morning, 12-year-old Maya wakes before the sun. Not to get ready for school—but to fetch water.</p>
                 <p>She walks nearly 3 kilometers down a dusty path in her rural village.The river she collects from isn't clean, but it'Fs the only option.</p>
                 <img src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
@@ -116,7 +116,7 @@
                 <img src="assets/elements/boiling-water.svg" alt="A pot with boiling water over a fire">
                 <p>Maya is one of 2.2 billion people worldwide without access to safe drinking water.</p>
             </div>
-            <div class="history__part">
+            <div class="history__part history__part--drought">
                 <p>Her family lives in a region hit by frequent droughts. Part of the 1.4 billion affected by droughts between 2002 and 2021.</p>
             </div>
             <div class="history__part">
@@ -132,7 +132,7 @@
             <div class="history__part">
                 <p>Less than 20% of countries with shared waters have strong cooperation.</p>
             </div>
-            <div class="history__part">
+            <div class="history__part history__part--drought">
                 <p>There is progress. Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
                 <!-- Animation of plant -->
             </div>
