--- a/index.html
+++ b/index.html
@@ -102,43 +102,57 @@
                 <p class="history__text">In 2015, the world pledged to ensure clean water and sanitation for all by 2030 through Sustainable Development Goal 6, but as of 2022, not a single target is on track.</p>
             </div>
             <div class="history__part">
-                <p>This is the story about</p>
-                <p>Maya</p>
-                <img src="assets/elements/maya.svg" alt="A sad little girl">
+                <p class="history__text">This is the story about <span class="line-break history__important history__important--name">Maya</span></p>
+                <img class="history__img" src="assets/elements/maya.svg" alt="A sad little girl">
             </div>
-            <div class="history__part history__part--sunrise">
-                <p>Every morning, 12-year-old Maya wakes before the sun. Not to get ready for school—but to fetch water.</p>
-                <p>She walks nearly 3 kilometers down a dusty path in her rural village.The river she collects from isn't clean, but it'Fs the only option.</p>
-                <img src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
-            </div>
-            <div class="history__part">
-                <p>Boiling the water helps a little—when there's enough fuel, but some days, the water makes her sick.</p>
-                <img src="assets/elements/boiling-water.svg" alt="A pot with boiling water over a fire">
-                <p>Maya is one of 2.2 billion people worldwide without access to safe drinking water.</p>
-            </div>
-            <div class="history__part history__part--drought">
-                <p>Her family lives in a region hit by frequent droughts. Part of the 1.4 billion affected by droughts between 2002 and 2021.</p>
+            <div class="history__sunrise">
+                <div class="history__part">
+                    <p class="history__text history__text--shorter">Every morning, 12-year-old Maya wakes before the sun. Not to get ready for school—but to fetch water.</p>
+                </div>
+                <div class="history__part history__part--unset">
+                    <p class="history__text history__text--top">She walks nearly 3 kilometers down a dusty path in her rural village. The river she collects from isn't clean, but it's the only option.</p>
+                    <img class="history__img history__img--character" src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
+                </div>
             </div>
             <div class="history__part">
-                <p>On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
-                <p>In 2022, half the world faced severe water scarcity. One in four people lived with extremely high water stress.</p>
-                <img src="assets/elements/earth.svg" alt="The earth going from green to brown">
+                <p class="history__text history__text--boiling">Boiling the water helps a little—when there's enough fuel,</p>
+                <img class="history__boiling-img" src="assets/elements/boiling-water.svg" alt="A pot with boiling water over a fire">
+                <p>but some days the water makes her sick, and she can't go to school..</p>
             </div>
             <div class="history__part">
-                <p>Maya's river flows through two countries.</p>
-                <svg></svg> <!-- The river -->
-                <p>But neither government talks to the other about how to protect it.</p>
+                <p class="history__text">Maya is one of <span class="line-break history__important">2.2 billion people worldwide</span> without access to safe drinking water.</p>
+            </div>
+            <div class="history__part history__part--drought history__part--unset">
+                <p class="history__text history__text--top">Her family lives in a region hit by frequent droughts. <span class="line-break">Part of the 1.4 billion affected by droughts between 2002 and 2021.</span></p>
             </div>
             <div class="history__part">
-                <p>Less than 20% of countries with shared waters have strong cooperation.</p>
+                <p class="history__text history__text--shorter">On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
+                <div class="history__earth-container">
+                    <img  class="history__img history__img--earth" src="assets/elements/earth.svg" alt="The earth going from green to brown">
+                </div>
+                <p class="history__text">In 2022, half the world faced severe water scarcity. <span class="line-break">One in four people lived with extremely high water stress.</span></p>
             </div>
-            <div class="history__part history__part--drought">
-                <p>There is progress. Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
+            <div class="history__part">
+                <p class="history__text history__text--left history__text--top">Maya's river flows through two countries.</p>
+                <svg class="history__river" >
+                    <path d="M -30 500
+                        Q 250 50, 750 200 
+                        Q 1000 270, 1470 10"
+                    />
+                  </svg>
+                <p class="history__text history__text--right">But neither government talks to the other about how to protect it.</p>
+            </div>
+            <div class="history__part">
+                <p class="history__text">Less than <span class="line-break history__important">20% of countries</span> with shared waters have strong cooperation.</p>
+            </div>
+            <div class="history__part history__part--hope history__part--unset">
+                <h2 class="history__text history__text--top">There is progress:</h2>
+                <p class="history__text">Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
                 <!-- Animation of plant -->
             </div>
-            <div class="history__part">
-                <p>But Maya doesn't feel that progress—not yet.</p>
-                <img src="assets/elements/maya.svg" alt="A sad little girl">
+            <div class="history__part history__part--red">
+                <p class="history__text">But Maya doesn't feel that progress yet.</p>
+                <img class="history__img history__img--character-small" src="assets/elements/maya.svg" alt="A sad little girl">
             </div>
         </section>
         <section class="message">
