--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section class="section-top"> <!-- Section 1 og 2: Johan -->
-            <h1 class="section-top__title">Goal 6</h1>
+            <h1>Goal 6</h1>
             <p class="section-top__text">Ensure availability and sustainable management of water and
                 sanitation for all</p>
             <img class="section-top__icon" src="assets/elements/waterdrop.svg" alt="waterdrop">
@@ -29,14 +29,16 @@
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.1</h2>
-                    <p class="scrollContent__paragraph">By 2030, achieve universal and equitable access to safe and affordable drinking water for all</p>
+                    <p class="scrollContent__paragraph">By 2030, achieve universal and equitable access to safe and
+                        affordable drinking water for all</p>
                 </div>
             </div>
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.2</h2>
-                    <p class="scrollContent__paragraph">By 2030, achieve access to adequate and equitable sanitation and hygiene for all and end open
+                    <p class="scrollContent__paragraph">By 2030, achieve access to adequate and equitable sanitation and
+                        hygiene for all and end open
                         defecation, paying special attention to the needs of women and girls and those in vulnerable
                         situations
                     </p>
@@ -46,8 +48,10 @@
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.3</h2>
-                    <p class="scrollContent__paragraph">By 2030, improve water quality by reducing pollution, eliminating dumping and minimizing release of
-                        hazardous chemicals and materials, halving the proportion of untreated wastewater and substantially
+                    <p class="scrollContent__paragraph">By 2030, improve water quality by reducing pollution,
+                        eliminating dumping and minimizing release of
+                        hazardous chemicals and materials, halving the proportion of untreated wastewater and
+                        substantially
                         increasing recycling and safe reuse globally
                     </p>
                 </div>
@@ -56,16 +60,19 @@
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.4</h2>
-                    <p class="scrollContent__paragraph">By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable
-                        withdrawals and supply of freshwater to address water scarcity and substantially reduce the number
+                    <p class="scrollContent__paragraph">By 2030, substantially increase water-use efficiency across all
+                        sectors and ensure sustainable
+                        withdrawals and supply of freshwater to address water scarcity and substantially reduce the
+                        number
                         of people suffering from water scarcity</p>
                 </div>
             </div>
             <div class="horizontal__container">
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
-                    <h2 class="scrollContent__title"horizontal__title>6.5</h2>
-                    <p class="scrollContent__paragraph">By 2030, implement integrated water resources management at all levels, including through
+                    <h2 class="scrollContent__title" horizontal__title>6.5</h2>
+                    <p class="scrollContent__paragraph">By 2030, implement integrated water resources management at all
+                        levels, including through
                         transboundary cooperation as appropriate</p>
                 </div>
             </div>
@@ -73,7 +80,8 @@
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.6</h2>
-                    <p class="scrollContent__paragraph">By 2020, protect and restore water-related ecosystems, including mountains, forests, wetlands,
+                    <p class="scrollContent__paragraph">By 2020, protect and restore water-related ecosystems, including
+                        mountains, forests, wetlands,
                         rivers, aquifers and lakes</p>
                 </div>
             </div>
@@ -81,8 +89,10 @@
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.7</h2>
-                    <p class="scrollContent__paragraph">By 2030, expand international cooperation and capacity-building support to developing countries in
-                        water- and sanitation-related activities and programmes, including water harvesting, desalination,
+                    <p class="scrollContent__paragraph">By 2030, expand international cooperation and capacity-building
+                        support to developing countries in
+                        water- and sanitation-related activities and programmes, including water harvesting,
+                        desalination,
                         water efficiency, wastewater treatment, recycling and reuse technologies</p>
                 </div>
             </div>
@@ -90,7 +100,8 @@
                 <div class="scrollContent">
                     <img class="scrollContent__img" src="assets/elements/waterdrop.svg" alt="waterdrop">
                     <h2 class="scrollContent__title">6.8</h2>
-                    <p class="scrollContent__paragraph">Support and strengthen the participation of local communities in improving water and sanitation
+                    <p class="scrollContent__paragraph">Support and strengthen the participation of local communities in
+                        improving water and sanitation
                         management</p>
                 </div>
             </div>
@@ -99,8 +110,9 @@
         <section class="facts"> <!-- Section 4: Tuva -->
             <div class="facts__intro">
                 <h2 class="facts__title">The Clock Is Ticking on SDG 6</h2>
-                <p class="facts__text">Despite progress in some areas, the world is falling dangerously behind on Sustainable Development Goal
-                6. As of 2022, not a single SDG 6 target is on track to be met.</p>
+                <p class="facts__text">Despite progress in some areas, the world is falling dangerously behind on
+                    Sustainable Development Goal
+                    6. As of 2022, not a single SDG 6 target is on track to be met.</p>
                 <!-- An image or something -->
             </div>
             <div class="facts__container"><!-- To create grid or flex -->
@@ -110,48 +122,57 @@
                         <li>2.2 billion people still lack access to safely managed drinking water</li>
                         <li>3.5 billion people live without safely managed sanitation</li>
                         <li>Between 2002 and 2021, droughts affected over 1.4 billion people</li>
-                        <li>In 2022, half of the global population experienced severe water scarcity, and one in four faced extremely high water stress</li>
+                        <li>In 2022, half of the global population experienced severe water scarcity, and one in four
+                            faced extremely high water stress</li>
                     </ul>
                 </div>
                 <div class="facts__item">
-                    <p class="facts__text">Nearly 40% of the world’s population lives in river and lake basins that cross national borders.
+                    <p class="facts__text">Nearly 40% of the world’s population lives in river and lake basins that
+                        cross national borders.
                         Yet, fewer than 20% of countries have effective agreements to manage these shared waters.
                         Without cooperation, both people and planet suffer.</p>
                     <img src="assets/elements/waterdrop.svg">
                 </div>
                 <div class="facts__item facts__item--reverse">
                     <img src="assets/elements/waterdrop.svg">
-                    <p class="facts__text">Access to water and sanitation is improving, but not quickly enough to meet 2030 goals—progress
+                    <p class="facts__text">Access to water and sanitation is improving, but not quickly enough to meet
+                        2030 goals—progress
                         must accelerate 3 to 6 times faster.</p>
                 </div>
                 <div class="facts__item">
-                    <p class="facts__text">Wastewater treatment is increasing, yet only 60% is safely treated, and water quality is
+                    <p class="facts__text">Wastewater treatment is increasing, yet only 60% is safely treated, and water
+                        quality is
                         declining where monitoring is most advanced.</p>
-                        <img src="assets/elements/waterdrop.svg">
+                    <img src="assets/elements/waterdrop.svg">
                 </div>
                 <div class="facts__item facts__item--reverse">
                     <img src="assets/elements/waterdrop.svg">
-                    <p class="facts__text">Water use is more efficient, but global water stress is rising, especially in vulnerable regions.</p>
+                    <p class="facts__text">Water use is more efficient, but global water stress is rising, especially in
+                        vulnerable regions.</p>
                 </div>
                 <div class="facts__item">
-                    <p class="facts__text">Integrated water management remains slow—just 57% implementation globally, and many countries
+                    <p class="facts__text">Integrated water management remains slow—just 57% implementation globally,
+                        and many countries
                         still lack agreements on shared waters.</p>
-                        <img src="assets/elements/waterdrop.svg">
+                    <img src="assets/elements/waterdrop.svg">
                 </div>
                 <div class="facts__item facts__item--reverse">
                     <img src="assets/elements/waterdrop.svg">
-                    <p class="facts__text">While surface water has grown overall, some regions face dangerous losses due to drought and
+                    <p class="facts__text">While surface water has grown overall, some regions face dangerous losses due
+                        to drought and
                         overuse.</p>
                 </div>
                 <div class="facts__item">
-                    <p class="facts__text">Funding is finally rising again, with water sector aid up 10% in 2022, reversing a five-year dip.</p>
+                    <p class="facts__text">Funding is finally rising again, with water sector aid up 10% in 2022,
+                        reversing a five-year dip.</p>
                     <img src="assets/elements/waterdrop.svg">
                 </div>
             </div>
         </section>
         <section class="message">
             <h2>We Can’t Afford to Wait</h2>
-            <p class="message__text">The message is clear: progress is possible, but not at the current pace. Without bold, coordinated global
+            <p class="message__text">The message is clear: progress is possible, but not at the current pace. Without
+                bold, coordinated global
                 action, millions will continue to live
                 without the most basic of human rights—clean water and sanitation. It’s time to prioritize integrated
                 water management, climate adaptation,
@@ -165,7 +186,8 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
     <footer class="footer">
-        <p class="footer__text">&#169; This page was created by Emil Larsen, Johan Markus Faanes and Tuva Konstanse Hansen for the class IDG1293</p>
+        <p class="footer__text">&#169; This page was created by Emil Larsen, Johan Markus Faanes and Tuva Konstanse
+            Hansen for the class IDG1293</p>
     </footer>
 </body>
 
