--- a/index.html
+++ b/index.html
@@ -108,61 +108,65 @@
             <div class="history">
                 <div class="history__part">
                     <h2 class="history__title">The Clock Is Ticking...</h2>
-                    <p class="history__text hidden-font" data-hidden="hidden-font">In 2015, the world pledged to ensure clean water and sanitation for all by 2030 through Sustainable Development Goal 6, but as of 2022, not a single target is on track.</p>
+                    <p class="history__text hidden-font" data-hidden="hidden">In 2015, the world pledged to ensure clean water and sanitation for all by 2030 through Sustainable Development Goal 6, but as of 2022, not a single target is on track.</p>
                 </div>
                 
                 <div class="history__part">
-                    <p class="history__text">This is the story about <span class="line-break history__important history__important--name hidden-font" data-hidden="hidden-font">Maya</span></p>
-                    <img class="history__img" src="assets/elements/maya.svg" alt="A sad little girl">
+                    <p class="history__text">This is the story about <span class="line-break history__important history__important--name hidden-font" data-hidden="hidden">Maya</span></p>
+                    <img class="history__character-img" src="assets/elements/maya.svg" alt="A sad little girl">
                 </div>
                 <div class="history__sunrise">
                     <div class="history__part">
-                        <p class="history__text history__text--shorter">Every morning, 12-year-old Maya wakes before the sun. Not to get ready for school—but to fetch water.</p>
+                        <p class="history__text history__text--written-firstline" data-hidden="hidden">Every morning, 12-year-old Maya wakes before the sun.</p> 
+                        <p class="history__text history__text--written-secondline" data-hidden="hidden">Not to get ready for school—but to fetch water.</p>
                     </div>
                     <div class="history__part history__part--unset">
-                        <p class="history__text history__text--top">She walks nearly 3 kilometers down a dusty path in her rural village. The river she collects from isn't clean, but it's the only option.</p>
-                        <img class="history__img history__img--character" src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
+                        <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">She walks nearly 3 kilometers down a dusty path in her rural village.</p>
+                        <p class="history__text history__text--written-secondline" data-hidden="hidden">The river she collects from isn't clean, but it's the only option.</p>
+                        <img class="history__bucketsCharacter-img" src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
                     </div>
                 </div>
                 <div class="history__part">
-                    <p class="history__text history__text--boiling">Boiling the water helps a little—when there's enough fuel,</p>
+                    <p class="history__text history__text--written-firstline" data-hidden="hidden">Boiling the water helps a little—when there's enough fuel,</p>
                     <img class="history__boiling-img" src="assets/elements/boiling-water.svg" alt="A pot with boiling water over a fire">
-                    <p>but some days the water makes her sick, and she can't go to school..</p>
+                    <p class="history__text history__text--written-secondline" data-hidden="hidden">but some days the water makes her sick, and she can't go to school..</p>
                 </div>
                 <div class="history__part">
-                    <p class="history__text">Maya is one of <span class="line-break history__important hidden-font" data-hidden="hidden-font">2.2 billion people worldwide</span> without access to safe drinking water.</p>
+                    <p class="history__text">Maya is one of <span class="line-break history__important hidden-font" data-hidden="hidden">2.2 billion people worldwide</span> without access to safe drinking water.</p>
                 </div>
                 <div class="history__part history__part--drought history__part--unset">
-                    <p class="history__text history__text--top">Her family lives in a region hit by frequent droughts. <span class="line-break hidden-font" data-hidden="hidden-font">Part of the 1.4 billion affected by droughts between 2002 and 2021.</span></p>
+                    <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">Her family lives in a region hit by frequent droughts.</p> 
+                    <p class="history__text history__text--written-secondline" data-hidden="hidden">Part of the 1.4 billion affected by droughts between 2002 and 2021.</p>
                 </div>
                 <div class="history__part">
                     <p class="history__text history__text--shorter">On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
                     <div class="history__earth-container">
-                        <img  class="history__img history__img--earth" src="assets/elements/earth.svg" alt="The earth going from green to brown">
+                        <img class="history__earth-img" data-hidden="hidden" src="assets/elements/earth.svg" alt="The earth going from green to brown">
                     </div>
-                    <p class="history__text">In 2022, half the world faced severe water scarcity. <span class="line-break hidden-font" data-hidden="hidden-font">One in four people lived with extremely high water stress.</span></p>
+                    <p class="history__text">In 2022, half the world faced severe water scarcity. <span class="line-break">One in four people lived with extremely high water stress.</span></p>
                 </div>
                 <div class="history__part">
-                    <p class="history__text history__text--left history__text--top">Maya's river flows through two countries.</p>
-                    <svg class="history__river" >
+                    <p class="history__text history__text--left">Maya's river flows through two countries.</p>
+                    <p class="history__text history__text--right">But neither government talks to the other about how to protect it.</p>
+            
+                    <svg class="history__river" data-hidden="hidden">
                         <path d="M -30 500
                             Q 250 50, 750 200 
                             Q 1000 270, 1470 10"
                         />
                     </svg>
-                    <p class="history__text history__text--right">But neither government talks to the other about how to protect it.</p>
                 </div>
                 <div class="history__part">
-                    <p class="history__text">Less than <span class="line-break history__important hidden-font" data-hidden="hidden-font">20% of countries</span> with shared waters have strong cooperation.</p>
+                    <p class="history__text">Less than <span class="line-break history__important hidden-font" data-hidden="hidden">20% of countries</span> with shared waters have strong cooperation.</p>
                 </div>
                 <div class="history__part history__part--hope history__part--unset">
                     <h2 class="history__text history__text--top">There is progress:</h2>
                     <p class="history__text">Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
-                    <!-- Animation of plant -->
+                    <img class="history__plant-img" data-hidden="hidden" src="assets/elements/plant.svg" alt="Plant growing">
                 </div>
                 <div class="history__part history__part--red">
-                    <p class="history__text">But Maya doesn't feel that progress yet.</p>
-                    <img class="history__img history__img--character-small" src="assets/elements/maya.svg" alt="A sad little girl">
+                    <p class="history__text hidden-font" data-hidden="hidden">But Maya doesn't feel that progress yet.</p>
+                    <img class="history__smallCharacter-img" src="assets/elements/maya.svg" alt="A sad little girl">
                 </div>
             </div>
         </section>
