fixed small issue

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="history">
                 <div class="history__part">
                     <h2 class="history__title">The Clock Is Ticking...</h2>
-                    <p class="history__text hidden-font" data-hidden="hidden">In 2015, the world pledged to ensure clean water and sanitation for all by 2030 through Sustainable Development Goal 6, but as of 2022, not a single target is on track.</p>
+                    <p class="history__text history__text--growing hidden-font" data-hidden="hidden">In 2015, the world pledged to ensure clean water and sanitation for all by 2030 through Sustainable Development Goal 6, but as of 2022, not a single target is on track.</p>
                 </div>
                 
                 <div class="history__part">
@@ -165,7 +165,7 @@
                     <img class="history__plant-img" data-hidden="hidden" src="assets/elements/plant.svg" alt="Plant growing">
                 </div>
                 <div class="history__part history__part--red">
-                    <p class="history__text hidden-font" data-hidden="hidden">But Maya doesn't feel that progress yet.</p>
+                    <p class="history__text history__text--growing hidden-font" data-hidden="hidden">But Maya doesn't feel that progress yet.</p>
                     <img class="history__smallCharacter-img" src="assets/elements/maya.svg" alt="A sad little girl">
                 </div>
             </div>
