fixed some mistakes in the text in HTML, and added contentin Readme. Also removed one line in js that i did not need since now we have scroll on mobile.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <section class="section-wave">
             <!-- Wave animation, drop falling -->
-            <h2 class="section-wave__text">Half the world experiences severe water scarcity every year — and the number
+            <h2 class="section-wave__text">Half the world experiences severe water scarcity every year, and the number
                 is growing.</h2>
             <div class="section-wave__icon"></div>
         </section>
@@ -134,23 +134,23 @@
                 <div class="history__sunrise">
                     <div class="history__part">
                         <p class="history__text history__text--written-firstline" data-hidden="hidden">Every morning,
-                            12-year-old Maya wakes before the sun.</p>
+                            12-year-old Maya wakes up before the sun.</p>
                         <p class="history__text history__text--written-secondline" data-hidden="hidden">Not to get ready
-                            for school—but to fetch water.</p>
+                            for school, but to fetch water.</p>
                     </div>
                     <div class="history__part history__part--unset">
                         <p class="history__text history__text--top history__text--written-firstline"
                             data-hidden="hidden">She walks nearly 3 kilometers down a dusty path in her rural village.
                         </p>
                         <p class="history__text history__text--written-secondline" data-hidden="hidden">The river she
-                            collects from isn't clean, but it's the only option.</p>
+                            collects water from isn't clean, but it's the only option.</p>
                         <img class="history__character-img history__character-img--buckets"
                             src="assets/elements/maya-buckets.svg" alt="A sad little girl with two buckets">
                     </div>
                 </div>
                 <div class="history__part">
                     <p class="history__text history__text--written-firstline" data-hidden="hidden">Boiling the water
-                        helps a little—when there's enough fuel,</p>
+                        helps a little, when there's enough fuel,</p>
                     <img class="history__boiling-img" src="assets/elements/boiling-water.svg"
                         alt="A pot with boiling water over a fire">
                     <p class="history__text history__text--written-secondline" data-hidden="hidden">but some days the
