Removed reduced motion, since that messed up the page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <script src="assets/scripts/script.js" defer></script>
     <script src="assets/scripts/history.js" defer></script>
-    <title>Homepage</title>
+    <title>Oblig 3 - Gruppe 10 </title>
 </head>
 
 <body>
